# docs/swagger.json
@@ -139,9 +139,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Basic V1"
+                    "FCM V1"
                 ],
-                "summary": "Get all repo stock",
+                "summary": "Announce message to all devices",
+                "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.announcementRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1762,6 +1773,14 @@
                     "items": {
                         "$ref": "#/definitions/entity.StockOrder"
                     }
+                }
+            }
+        },
+        "v1.announcementRequest": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
